--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,25 +1,13 @@
-<html>
-    <head>
-        <title>Django Girls blog</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href="/">Django Carla Blog</a></h1>
+{% extends 'blog/base.html' %}
+
+{% block content %}
+    {% for post in posts %}
+        <div class="post">
+            <div class="date">
+                {{ post.published_date }}
+            </div>
+            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+            <p>{{ post.text|linebreaksbr }}</p>
         </div>
-
-        
-        {% for post in posts %} {{ post }}{% endfor %}
-
-        <div>
-            <h1><em><a href = "/" > Personalizado </a></em></h1>
-        </div>
-
-        {% for post in posts %} 
-
-        <div>
-        <p> publicado: {{ post.published_date }} </p><h2><a href = "" >{{ post.title }} </a></h2><p>{{ post.text|linebreaksbr }} </p>
-        </div>
-            
-            {% endfor %}
-    </body>
-</html>
+    {% endfor %}
+{% endblock %}
